<resources>
    <string name="app_name">GenerateInvoice</string>

    <string name="str_itemList">Item List</string>
    <string name="str_invoice">Invoice</string>
    <string name="str_cart">Cart</string>
    <string name="str_addCart">Add to Cart</string>
    <string name="str_continue">Continue</string>
    <string name="str_disOpt">Discount Options:</string>
    <string name="str_flat">Flat</string>
    <string name="str_percent">Percentage</string>
    <string name="str_discount">Discount:</string>
    <string name="str_received">Received:</string>
    <string name="str_next">Next</string>
    <string name="str_qty">Quantity:</string>
    <string name="str_total">Total:</string>
    <string name="str_return">Returned:</string>
    <string name="str_name">Name:</string>
    <string name="str_desc">Description:</string>
</resources>