<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"
    android:padding="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_disOpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_disOpt"
        style="@style/textviewTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_disOpt">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbFlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/str_flat" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_percent" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_discount"
        style="@style/textviewTitle"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toRightOf="@+id/tv_discount"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_75"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_received"
        style="@style/textviewTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_discount"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_40"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/edDiscount"
        app:layout_constraintLeft_toRightOf="@+id/tv_rec"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_75"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_next"
        app:layout_constraintTop_toBottomOf="@id/tv_rec"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_75"/>

</androidx.constraintlayout.widget.ConstraintLayout>